# warzone2100-64-player

./: .gitmodules  CMakeLists.txt  GPATH  GTAGS  grpc_install.sh
data/mp/: addon.lev
data/mp/multiplay/maps/10c-Emergence/: #struct.json#
lib/framework/: frame.h
lib/ivis_opengl/: #piepalette.cpp#  pieblitfunc.h  piepalette.cpp
lib/sdl/: CMakeLists.txt  main_sdl.cpp
po/: warzone2100.pot
protos/: astar.grpc.pb.cc  astar.grpc.pb.h  astar.pb.cc  astar.pb.h  astar.proto
src/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackConfigVersion.cmake  CPackSourceConfig.cmake  astar.cpp  astar.h  autorevisionForSourcePackage.cmake  baseobject.cpp  config.h  display3d.cpp  droid.cpp  droid.h  fpath.cpp  fpath.h  loop.cpp  loop.h  map.h  multiint.cpp  multimenu.cpp  multiplay.cpp  qtscriptfuncs.cpp  radar.cpp  server_main.cpp  structure.cpp  visibility.cpp
src/icons/: warzone2100.desktop
src/server/: CMakeLists.txt
src/src/: moc_qtscriptdebug.cpp_parameters
tests/: lint.cpp
tools/map/: mapload.h
